--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,7 @@
 {
     "presets": [
         "@babel/react",
-        [
-            "@babel/preset-env",
-            {
-                "useBuiltIns": "entry"
-            }
-        ]
+        "@babel/preset-env"
     ],
     "plugins": [
         "@babel/proposal-class-properties",
